--- a/TASK 1.ipynb
+++ b/TASK 1.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "**TASK 1 : PREDICTION USING SUPERVISED MACHINE LEARNING\n",
-    "BY : NITISH RAJ"
+    "BY : SEHAJ JOT SINGH"
    ]
   },
   {
